# qa_guru_python_2_16

./: pyproject.toml
poetry_test/: pyproject.toml
