[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = "homework"
authors = ["pavelsurov"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
