[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Pavel Surov <surov_p@tanukitech.ru>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
